data/derived/comb/progs/unify/prog7073.ml.out
Characters 23-36:
  let _ = sepConcat "X" ["hello", "yo"];;
                         ^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
